modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_const.gd
func test():
	print(c1)

final c1 = c2
final c2 = c1
